# oop_all

./: README.md
build-oop_1-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
build-oop_2-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-oop_3-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-oop_4-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-oop_5-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
build-oop_6-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
oop_1/: CMakeLists.txt  circle.h  ellips.cpp  ellips.h  figure.h  figure_list.cpp  figure_list.h  line.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parallel.h  rectangle.h  triangle.h
oop_2/: CMakeLists.txt  circle.cpp  circle.h  ellips.cpp  ellips.h  figure.h  figure_list.cpp  figure_list.h  line.cpp  line.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parallel.cpp  parallel.h  qmyframe.cpp  qmyframe.h  qt_painter_visitor.cpp  qt_painter_visitor.h  rectangle.cpp  rectangle.h  shape_factory.cpp  shape_factory.h  shape_visitor.cpp  shape_visitor.h  shapes_enum.h  triangle.cpp  triangle.h
oop_3/: CMakeLists.txt  air_transport.cpp  air_transport.h  airplane.cpp  car.cpp  car.h  dialog.cpp  ground_transport.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  motor_cycle.cpp  motor_cycle.h  transport.h
oop_4/: CMakeLists.txt  air_transport.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  motor_cycle.cpp
oop_4/plugins/boat/: CMakeLists.txt  boat.cpp  boat.h  boat_global.h
oop_4/plugins/water_transport/: CMakeLists.txt  water_transport.cpp  water_transport.h  water_transport_global.h
oop_5/: CMakeLists.txt  airplane.cpp  car.cpp  dialog.cpp  dialog.h  ground_transport.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  proc_interface.cpp  transport.cpp  transport.h
oop_6/: CMakeLists.txt  airplane.h  dialog.ui  file_context.cpp  file_context.h  ground_transport.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  plugin_manager.cpp  plugin_manager.h  proc_interface.h
oop_6/plugins/Lab5_PluginsFunctionality/: CMakeLists.txt  main.cpp
oop_6/plugins/Lab5_PluginsFunctionality/.cache/clangd/index/: Bike.cpp.82CBE5FF15978CAC.idx  Bike.hpp.B975362D790C1270.idx  Bus.cpp.13D1C56AA176AB0D.idx  Bus.hpp.0FE965EF891C1BE1.idx  Car.cpp.76564102720425F6.idx  Car.hpp.C5D466ED5BAF4B7A.idx  EditVehicleDialog.cpp.076A9CC6FE39BB2C.idx  EditVehicleDialog.hpp.DC12854D04D968D4.idx  ElectricScooter.cpp.5E45CE5A87437EF1.idx  ElectricScooter.hpp.5310C2BE97650654.idx  IProcessorPlugin.hpp.961179505F2E0A15.idx  IVehiclePlugin.hpp.1950853057F5E870.idx  IdentityPlugin.cpp.B04FCC9EF6DC4C52.idx  IdentityPlugin.hpp.C2DD5F1EB6C27225.idx  MainWindow.cpp.BDE7AB1093E44E0E.idx  MainWindow.hpp.683D9E6DD78FC69B.idx  Motorcycle.cpp.A2FEB2F4C866D690.idx  Motorcycle.hpp.0AB0A78A9AAFAC0C.idx  Truck.cpp.F9BEC4DAC16FC008.idx  Truck.hpp.D276AF4BA5C375B7.idx  Van.cpp.C54DC10725113B1A.idx  Van.hpp.03134631BD586277.idx  VanPlugin.cpp.547FF8AF266984E0.idx  VanPlugin.hpp.2B92AC3732694074.idx  Vehicle.cpp.402CC9E9EE0720E8.idx  Vehicle.hpp.95984C3E0525E5A2.idx  VehicleFactory.cpp.B923A22114B02A3A.idx  VehicleFactory.hpp.47EC6E7BB190B229.idx  ZlibCompressPlugin.cpp.964F05CD68DB687E.idx  ZlibCompressPlugin.hpp.4C7FC28480084500.idx  main.cpp.65ED1A4CA9C7D56F.idx
oop_6/plugins/Lab5_PluginsFunctionality/include/factory/: VehicleFactory.hpp
oop_6/plugins/Lab5_PluginsFunctionality/include/model/: Bike.hpp  Bus.hpp  Car.hpp  ElectricScooter.hpp  Motorcycle.hpp  Truck.hpp  Vehicle.hpp
oop_6/plugins/Lab5_PluginsFunctionality/include/plugin/: IProcessorPlugin.hpp  IVehiclePlugin.hpp
oop_6/plugins/Lab5_PluginsFunctionality/include/ui/: EditVehicleDialog.hpp  MainWindow.hpp
oop_6/plugins/Lab5_PluginsFunctionality/plugins/identity/: CMakeLists.txt  IdentityPlugin.cpp  IdentityPlugin.hpp
oop_6/plugins/Lab5_PluginsFunctionality/plugins/van/: CMakeLists.txt  Van.cpp  Van.hpp  VanPlugin.cpp  VanPlugin.hpp
oop_6/plugins/Lab5_PluginsFunctionality/plugins/zlib_compress/: CMakeLists.txt  ZlibCompressPlugin.cpp  ZlibCompressPlugin.hpp
oop_6/plugins/Lab5_PluginsFunctionality/src/factory/: VehicleFactory.cpp
oop_6/plugins/Lab5_PluginsFunctionality/src/model/: Bike.cpp  Bus.cpp  Car.cpp  ElectricScooter.cpp  Motorcycle.cpp  Truck.cpp  Vehicle.cpp
oop_6/plugins/Lab5_PluginsFunctionality/src/ui/: EditVehicleDialog.cpp  MainWindow.cpp
oop_6/plugins/xml_xslt_plugin_2/: CMakeLists.txt  xml_xslt_plugin_2.cpp  xml_xslt_plugin_2.h  xml_xslt_plugin_2_global.h
(+3432 files in other folders)
